Fixed navbar hover on mobile version.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,28 +44,19 @@ ROW TODOS COL-X MISMO HEIGHT
 /*****************************
 DROPDOWN SUB-MENUS
 *******************************/
-.dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    visibility: hidden;
-    margin-top: -1px;
-}
-.dropdown-menu li:hover .sub-menu {
-    visibility: visible;
-    display: block;
-}
+.dropdown-submenu{position:relative;}
+.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:0px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
+.dropdown-submenu:hover>.dropdown-menu{display:block;}
+.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#0089c8;margin-top:5px;margin-right:-10px;}
 ul.dropdown-menu {
     background-color: #00fcff;
 }
 .navbar-nav > li > .dropdown-menu a{
     color: #000000;
 }
-.dropdown-menu > li > a:hover {
-    /*background: linear-gradient(to bottom, #00fcff 0%,#0089c8 15%,#0089c8 85%,#00fcff 100%);*/
+.dropdown-menu > li > a:hover, a:active {
     background-color: #0089c8;
 }
-
-
 
 /**************************
 BTN-LOFC-PRIMARY
